# Predicao_Precos

./: Insurance.ipynb  README.md  pyproject.toml
