[tool.poetry]
name = "project 2 - health insurante prediction"
version = "0.1.0"
description = ""
authors = ["NicolasSP90 <nicolassp90@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
numpy = "^2.1.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
